UPDATE : 시간대를 전부 Instant, 리스트 관련 자료구조는 전부 List로 ArrayList 위주로 변경