@@ -4,7 +4,11 @@ import daehee.challengehub.user.profile.model.AchievementDto;
 import daehee.challengehub.user.profile.model.UserProfileDto;
 import org.springframework.stereotype.Repository;
 
-import java.util.*;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Repository
 public class ProfileRepository {
@@ -23,18 +27,18 @@ public class ProfileRepository {
         profiles.put(sampleProfile.getUserId(), sampleProfile);
 
         // 초기 성과 데이터
-        List<AchievementDto> sampleAchievements = Arrays.asList(
+        List<AchievementDto> sampleAchievements = List.of(
                 AchievementDto.builder()
                         .userId(1L)
                         .challengeId(101L)
                         .achievementDetails("10일 연속 챌린지 완료")
-                        .achievedDate("2023-01-10")
+                        .achievedDate(Instant.parse("2023-01-10T13:00:00Z"))
                         .build(),
                 AchievementDto.builder()
                         .userId(1L)
                         .challengeId(102L)
                         .achievementDetails("커뮤니티에서 활발한 활동")
-                        .achievedDate("2023-02-05")
+                        .achievedDate(Instant.parse("2023-02-05T13:00:00Z"))
                         .build()
         );
         achievements.put(1L, sampleAchievements);
